syntax = "proto3";

package inner_messagepb;

message AppendEntriesRequest {
    uint64 term = 1;
    uint64 leader_id = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    repeated bytes entries = 5;
    uint64 leader_commit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
    uint64 hint_index = 3;
}

message VoteRequest {
    uint64 term = 1;
    uint64 candidate_id = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
    bool is_pre_vote = 5;
}

message VoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
    repeated bytes spec_pool = 3;
    bool shutdown_candidate = 4;
}

message InstallSnapshotRequest {
    uint64 term = 1;
    uint64 leader_id = 2;
    uint64 last_included_index = 3;
    uint64 last_included_term = 4;
    uint64 offset = 5;
    bytes data = 6;
    bool done = 7;
}

message InstallSnapshotResponse {
    uint64 term = 1;
}

message TriggerShutdownRequest {}

message TriggerShutdownResponse {}

message TryBecomeLeaderNowRequest {}

message TryBecomeLeaderNowResponse {}

service InnerProtocol {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc Vote(VoteRequest) returns (VoteResponse);
    rpc InstallSnapshot(stream InstallSnapshotRequest)
        returns (InstallSnapshotResponse);
    rpc TriggerShutdown(TriggerShutdownRequest)
        returns (TriggerShutdownResponse);
    rpc TryBecomeLeaderNow(TryBecomeLeaderNowRequest) returns (TryBecomeLeaderNowResponse);
}
